2008-08-25  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.1.in: Document --limit option.

2008-08-24  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.1.in: Document --ignore and --version options.

2008-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.1.in: Document GENDARME_COLOR environment variable.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.1.in: Update description and mailing-list. 
	Change --debug to -v

2008-02-11  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.1.in: Fix version number (from Mono version to Gendarme)

2006-09-17  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme.1.in: Added documentation for new options (--quiet, --log,
	--xml and --html).